--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,22 @@
-<h1>Login</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid p-2">
+    <h1>My Rich Life</h1>
+  </div>
+</nav>
 
-<form>
-  <input id="username" type="text" name="username" placeholder="Username" />
-  <input id="password" type="password" name="password" placeholder="Password" />
-  <button id="submitBtn">Submit</button>
+
+<form class="p-5">
+  <div class="mb-1 col-2">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    
+  </div>
+  <div class="mb-1 col-2">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+
+  <button type="submit" class="btn btn-info">Login</button>
+  <button type="submit" class="btn btn-info">Sign Up</button>
 </form>
+
