new handlebar pages added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,8 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="/public/css/style.css" />
+
   </head>
   <body>
     {{! div with a form }}
@@ -22,7 +24,7 @@
         |
         <button class="no-button" id="logout">logout</button>
       {{else}}
-        {{!-- <a href="/login">login</a> --}}
+        {{! <a href="/login">login</a> }}
       {{/if}}
     </nav>
 
@@ -38,6 +40,14 @@
       {{! We need a form here }}
       <form action=""></form>
     </div>
+
+    <style>
+      body { background-image:
+      url("https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+      background-repeat: no-repeat; -webkit-background-size: cover;
+      -moz-background-size: cover; -o-background-size: cover; background-size:
+      cover; }
+    </style>
 
   </body>
 </html>
