--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,22 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #414d55">
   <div class="container-fluid p-2">
-    <h1>My Rich Life</h1>
+    <h1 style="color: white">My Rich Life</h1>
   </div>
 </nav>
-
 
 <form class="p-5">
   <div class="mb-1 col-2">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    
+    <input
+      type="email"
+      class="form-control"
+      id="exampleInputEmail1"
+      aria-describedby="emailHelp"
+    />
+
   </div>
   <div class="mb-1 col-2">
     <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <input type="password" class="form-control" id="exampleInputPassword1" />
   </div>
 
   <button type="submit" class="btn btn-info">Login</button>
   <button type="submit" class="btn btn-info">Sign Up</button>
 </form>
-
