--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
         |
         <button class="no-button" id="logout">logout</button>
       {{else}}
-        {{! <a href="/login">login</a> }}
+       res.render('login');
       {{/if}}
     </nav>
 
