--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,25 +1,40 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #414d55">
+<nav
+  class="navbar navbar-expand-lg navbar-light"
+  style="background-color: #414d55"
+>
   <div class="container-fluid p-2">
     <h1 style="color: white">My Rich Life</h1>
   </div>
 </nav>
 
+
+
 <form class="p-5">
   <div class="mb-1 col-2">
+
+</div>
+  <div class="mb-1 col-2">
+    <label for="username" class="form-label">Username</label>
+    <input type="username" class="form-control" id="username" />
+  </div>
+
+
     <label for="exampleInputEmail1" class="form-label">Email address</label>
     <input
       type="email"
       class="form-control"
-      id="exampleInputEmail1"
+      id="email"
       aria-describedby="emailHelp"
     />
 
   </div>
   <div class="mb-1 col-2">
     <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" />
+    <input type="password" class="form-control" id="password" />
   </div>
 
-  <button type="submit" class="btn btn-info">Login</button>
-  <button type="submit" class="btn btn-info">Sign Up</button>
+  <button id="loginBtn" type="submit" class="btn btn-info">Login</button>
+  <button id="signupBtn" type="submit" class="btn btn-info">Sign Up</button>
 </form>
+
+<script src="/js/login.js"></script>
