--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,18 +7,16 @@
   </div>
 </nav>
 
-
-
 <form class="p-5">
   <div class="mb-1 col-2">
 
-</div>
+  </div>
   <div class="mb-1 col-2">
     <label for="username" class="form-label">Username</label>
     <input type="username" class="form-control" id="username" />
   </div>
 
-
+  <div class="mb-1 col-2">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
     <input
       type="email"
