--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -16,7 +16,7 @@
     <input type="username" class="form-control" id="username" />
   </div>
 
-  {{!-- <div class="mb-1 col-2">
+  <div class="mb-1 col-2">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
     <input
       type="email"
@@ -25,13 +25,12 @@
       aria-describedby="emailHelp"
     />
 
-  </div> --}}
+  </div>
   <div class="mb-1 col-2">
     <label for="exampleInputPassword1" class="form-label">Password</label>
     <input type="password" class="form-control" id="password" />
   </div>
 
-  <button id="loginBtn" type="submit" class="btn btn-info">Login</button>
   <button id="signupBtn" type="submit" class="btn btn-info">Sign Up</button>
 </form>
 
