moved navbar in mainhandlebar

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,4 @@
-<nav
-  class="navbar navbar-expand-lg navbar-light"
-  style="background-color: #414d55"
->
-  <div class="container-fluid p-2">
-    <h1 style="color: white">My Rich Life</h1>
-  </div>
-</nav>
+
 
 <form class="p-5">
   <div class="mb-1 col-3">
@@ -33,7 +26,7 @@
 
   <button id="loginBtn" type="submit" class="btn btn-info mr-5">Login</button>
   {{!-- //create an anchor text to signup page --}}
-  <a href="/signup" id="signup" class="btn btn-info ">To Sign Up Click here</a> 
+  <a href="/signup" id="signup" class="btn btn-info ">To Sign Up Click Here</a> 
 </form>
 
 <script src="/js/login.js"></script>
