centered signup content

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,3 @@
-
-
 <form class="p-5">
   <div class="mb-1 col-3">
 
@@ -9,7 +7,7 @@
     <input type="username" class="form-control" id="username" />
   </div>
 
-  {{!-- <div class="mb-1 col-2">
+  {{! <div class="mb-1 col-2">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
     <input
       type="email"
@@ -18,15 +16,15 @@
       aria-describedby="emailHelp"
     />
 
-  </div> --}}
+  </div> }}
   <div class="mb-1 col-3">
     <label for="exampleInputPassword1" class="form-label">Password</label>
     <input type="password" class="form-control" id="password" />
   </div>
 
   <button id="loginBtn" type="submit" class="btn btn-info mr-5">Login</button>
-  {{!-- //create an anchor text to signup page --}}
-  <a href="/signup" id="signup" class="btn btn-info ">To Sign Up Click Here</a> 
+  {{! //create an anchor text to signup page }}
+  <a href="/signup" id="signup" class="btn btn-info">To Sign Up Click Here</a>
 </form>
 
 <script src="/js/login.js"></script>
