--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<form class="p-5">
+<form class="p-5 d-flex flex-column align-items-center">
   <div class="mb-1 col-2">
 
   </div>
@@ -21,7 +21,10 @@
     <label for="exampleInputPassword1" class="form-label">Password</label>
     <input type="password" class="form-control" id="password" />
   </div>
-  <button id="signupBtn" type="submit" class="btn btn-info">Sign Up</button>
+  <button id="signupBtn" type="submit" class="btn btn-info mt-3">Sign Up</button>
+  <p class="pt-3">
+    <a href="/login">Already have an account? Click Here to login!</a>
+  </p>
 </form>
 
 <script src="/js/signup.js"></script>
