--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<form class="p-5 d-flex flex-column align-items-center">
+<form id="loginForm" class="p-5 d-flex flex-column align-items-center">
   <div class="mb-1 col-2">
 
   </div>
