--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -7,7 +7,7 @@
       type="username"
       class="form-control"
       id="username"
-      placeholder="Enter Username"
+      placeholder="Enter Username ( 3-10 characters )"
     />
     <label for="username" class="ps-2 form-label">
       You can use letters and numbers</label>
