--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -40,6 +40,7 @@
   <p class="pt-3">
     <a href="/login">Already have an account? Click Here to login!</a>
   </p>
+  <p id="alert" style="color: red;"></p>
 </form>
 
 <script src="/js/signup.js"></script>
