created '$alert' variable in login.js

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -27,6 +27,7 @@
   <p class="pt-3">
     <a href="/signup">Need an account? Click here to signup!</a>
   </p>
+  <p id="alert" style="color: red;"></p>
 </form>
 
 <script src="/js/login.js"></script>
