--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,8 @@
 
-<div class="mb-3">
+<div class="mb-3 m-3">
     <h2>What does your rich life look like?</h2>
   <label for="exampleFormControlTextarea1" class="form-label"></label>
+  <input type="title" id="title" class="form-control mb-3" placeholder="Title"/>
   <textarea class="form-control" id="exampleFormControlTextarea1" rows="10" placeholder="Envision and articulate your rich life here"></textarea>
+  <button id="PostBtn" type="submit" class="btn btn-info mt-3">Post</button>
 </div>
