--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
 /* body {
     background-image: url("https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 } */
+
+.show {
+  display: none;
+}
