--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
   </head>
   <body>
@@ -36,9 +36,9 @@
           >
             +
           </button>
-          <div id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <div id="dropdown" class="show">
             <a id="homeBtn" class="dropdown-item" href="/home">Home</a>
-            <a id="dashboardBtn" class="dropdown-item" href="/dashboard">Dashboard</a>
+            <a id="dashboardBtn" href="/dashboard">Dashboard</a>
             <a id="logoutBtn" class="dropdown-item" href="/logout">Log out</a>
           </div>
         </div>
@@ -67,6 +67,8 @@
       -moz-background-size: cover; -o-background-size: cover; background-size:
       cover; }
     </style>
+
+    <script src="/js/main.js"></script>
 
   </body>
 </html>
