--- a/views/forum.handlebars
+++ b/views/forum.handlebars
@@ -1,10 +1,19 @@
-<nav
-  class="navbar navbar-expand-lg navbar-light"
-  style="background-color: #414d55"
->
-  <div class="container-fluid p-2">
-    <h1 style="color: white">My Rich Life</h1>
-  </div>
-</nav>
 
-{{! Comments written by users (with usernames) will be dsplayed here. }}
+{{! Posts written by users (with usernames) will be dsplayed here. }}
+
+
+{{#each posts as |post|}}
+  <li>
+    <h3>{{post.title}}</h3>
+    <p>{{post.body}}</p>
+    <p>By: {{post.user.username}}</p>
+  </li>
+{{/each}}
+
+<ul>
+
+
+  
+</ul>
+
+
