--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,17 +12,18 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap" rel="stylesheet">
 
   </head>
   <body>
 
-    <nav
+        <nav
       class="navbar navbar-expand-lg navbar-light"
-      style="background-color: #414d55"
+      style="background-color: #8af2f4aa"
     >
-      <div class="container-fluid p-2">
-        <h1 style="color: white">My Rich Life</h1>
+      <div class="container-fluid p-2 navbar-font">
+        <h1 style="color:#45415b; font-family: 'Bruno Ace', sans-serif;">Rich Lifestyle</h1>
       </div>
     </nav>
 
