added alertDisplay function in forum.js

--- a/views/forum.handlebars
+++ b/views/forum.handlebars
@@ -8,7 +8,7 @@
   <form id="comment-form">
     <label for="content">Comment as {{username}}</label>
     <textarea
-      id="content"
+      id="commentInput"
       name="content"
       placeholder="What are your thoughts?"
     ></textarea>
