dropdown text-light added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
       {{#if loggedIn}}
         <div class="dropdown">
           <button
-            class="btn btn-info dropdown-toggle ml-3"
+            class="btn btn-info dropdown-toggle m-3"
             type="button"
             id="dropdownBtn"
             data-toggle="dropdown"
@@ -37,9 +37,9 @@
             +
           </button>
           <div id="dropdown" class="show">
-            <a id="homeBtn" class="dropdown-item" href="/home">Home</a>
-            <a id="dashboardBtn" href="/dashboard">Dashboard</a>
-            <a id="logoutBtn" class="dropdown-item" href="/logout">Log out</a>
+            <a id="homeBtn" class="dropdown-item text-light" href="/home">Home</a>
+            <a id="dashboardBtn" class="dropdown-item text-light" href="/dashboard">Dashboard</a>
+            <a id="logoutBtn" class="dropdown-item text-light" href="/logout">Log out</a>
           </div>
         </div>
 
