--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,17 +1,21 @@
-  
-   
+{{! Purpose: Display all posts on the home page }}
+
 <link rel="stylesheet" href="/css/home.css" />
 
 <div class="card-container">
-  {{#each cards}}
-    {{> cardTemplate}}
-  {{/each}}
+  {{if posts.length}}
+    {{#each posts}}
+      {{> postTemplate}}
+    {{/each}}
+  {{else}}
+    <h3>No posts yet...</h3>
+  {{/if}}
 </div>
    
-<template id="card-template">
+{{!-- <template id="card-template">
   <div class="dream-card">
     <h3>{{title}}</h3>
     <p>{{content}}</p>
   </div>
-</template>
+</template> --}}
 
