added content to post-details partial

--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,5 +1,7 @@
-<div id="post" data-id="{{post.id}}">
-  <p>Posted by: {{post.author}} on {{post.createdAt}}</p>
-  <h1>{{post.title}}</h1>
-  <p>{{post.content}}</p>
+<div id="post">
+  <a href="/forum/{{this.id}}">
+    <p>Posted by: {{this.author}} on {{this.createdAt}}</p>
+    <h1>{{this.title}}</h1>
+    <p class="dream-card">{{this.content}}</p>
+  </a>
 </div>
