--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,6 +5,13 @@
   align-items: flex-start;
 }
 
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .dream-card {
   width: 300px;
   height: 250px;
@@ -15,4 +22,27 @@
   border: 2px solid #a6f0e3;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   color: #fffcfc;
+  overflow: hidden;  
+}
+
+.dream-card-title {
+  font-size: 25px;    
+  margin-bottom: 5px;
+}
+
+.dream-card-divider {
+  height: 2px;
+  background-color: #a6f0e3;
+  margin-bottom: 10px;
+}
+
+.dream-card-details {
+  font-size: 10px;   
+  margin-bottom: 10px;
+}
+
+.dream-card-content {
+  font-size: 12px;    
+  height: calc(100% - 54px);
+  overflow: hidden;   
 }
