--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,5 +1,5 @@
 <div id="post">
-  <a href="/forum/{{this.id}}">
+  <a class="dream-card-a" href="/forum/{{this.id}}">
     <div class="dream-card">
       <h1 class="dream-card-title">{{this.title}}</h1>
       <div class="dream-card-divider"></div>
