slight comment clean up on home.css

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -49,6 +49,6 @@
 }
 
 .dream-card-a {
-  text-decoration: none;  /* Remove underline */
-  color: inherit;         /* Inherit color from parent element */
+  text-decoration: none;  
+  color: inherit;         
 }
