--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -3,7 +3,10 @@
     <div class="dream-card">
       <h1 class="dream-card-title">{{this.title}}</h1>
       <div class="dream-card-divider"></div>
-      <p class="dream-card-details">Posted by: {{this.author}} on {{this.createdAt}}</p>
+      <p class="dream-card-details">Posted by:
+        {{this.author}}
+        on
+        {{format_date this.createdAt}}</p>
       <p class="dream-card-content">{{this.content}}</p>
     </div>
   </a>
