--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,18 +13,25 @@
     />
 
     <link rel="stylesheet" href="/css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display&display=swap"
+      rel="stylesheet"
+    />
 
   </head>
   <body>
 
-        <nav
+    <nav
       class="navbar navbar-expand-lg navbar-light"
       style="background-color: #8af2f4aa"
     >
       <div class="container-fluid p-2 navbar-font">
-        <h1 style="color:#45415b; font-family: 'Bruno Ace', sans-serif;">Rich Lifestyle</h1>
+        <h1 style="color:#45415b; font-family: 'Bruno Ace', sans-serif;">Rich
+          Lifestyle</h1>
       </div>
       {{#if loggedIn}}
         <div class="dropdown">
@@ -39,9 +46,21 @@
             +
           </button>
           <div id="dropdown" class="show">
-            <a id="homeBtn" class="dropdown-item text-light" href="/home">Home</a>
-            <a id="dashboardBtn" class="dropdown-item text-light" href="/dashboard">Dashboard</a>
-            <a id="logoutBtn" class="dropdown-item text-light" href="/logout">Log out</a>
+            <a
+              id="homeBtn"
+              class="dropdown-item text-light"
+              href="/home"
+            >Home</a>
+            <a
+              id="dashboardBtn"
+              class="dropdown-item text-light"
+              href="/"
+            >Dashboard</a>
+            <a
+              id="logoutBtn"
+              class="dropdown-item text-light"
+              href="/logout"
+            >Log out</a>
           </div>
         </div>
 
