--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,14 +7,15 @@
 
 .card-container {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .dream-card {
-  width: 300px;
-  height: 250px;
+  width: 850px;
+  min-height: 250px;
   margin: 10px;
   background-color: #ffffff;
   padding: 20px;
@@ -22,11 +23,11 @@
   border: 2px solid #45415b;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   color: #45415b;
-  overflow: hidden;  
+  overflow: hidden;
 }
 
 .dream-card-title {
-  font-size: 25px;    
+  font-size: 25px;
   margin-bottom: 5px;
 }
 
@@ -37,18 +38,18 @@
 }
 
 .dream-card-details {
-  font-size: 10px;   
+  font-size: 10px;
   margin-bottom: 10px;
 }
 
 .dream-card-content {
-  font-family: 'Wix Madefor Display', sans-serif;
-  font-size: 12px;    
+  font-family: "Wix Madefor Display", sans-serif;
+  font-size: 12px;
   height: calc(100% - 54px);
-  overflow: hidden;   
+  overflow: hidden;
 }
 
 .dream-card-a {
-  text-decoration: none;  
-  color: inherit;         
+  text-decoration: none;
+  color: inherit;
 }
