--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,13 +5,13 @@
     type="title"
     id="title"
     class="form-control mb-3"
-    placeholder="Title"
+    placeholder="Create a title (Can't be longer than 50 characters!)"
   />
   <textarea
     class="form-control"
     id="content"
     rows="10"
-    placeholder="Envision and articulate your rich life here"
+    placeholder="Envision and articulate your rich life here (Can't be longer than 1000 characters!)"
   ></textarea>
   <button id="postBtn" type="submit" class="btn btn-info mt-3">Post</button>
   <p id="alert" style="color: red;"></p>
