removed post content length restriction

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,7 +11,7 @@
     class="form-control"
     id="content"
     rows="10"
-    placeholder="Envision and articulate your rich life here (Can't be longer than 1000 characters!)"
+    placeholder="Envision and articulate your rich life here!"
   ></textarea>
   <button id="postBtn" type="submit" class="btn btn-info mt-3">Post</button>
   <p id="alert" style="color: red;"></p>
