--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,11 +56,7 @@
               class="dropdown-item text-light"
               href="/"
             >Dashboard</a>
-            <a
-              id="logoutBtn"
-              class="dropdown-item text-light"
-              href="/signup"
-            >Log out</a>
+            <a id="logoutBtn" class="dropdown-item text-light">Log out</a>
           </div>
         </div>
 
