--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,20 +2,57 @@
     background-image: url("https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 } */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #45415bf0;
+}
 .show {
   display: none;
 }
 
+a:hover {
+  background-color: #45415bf0 !important;
+}
 
 .navbar {
-    border: 3px solid #45415bf0; 
-    background-image: url("/img/RichLifestyle-BG.jpeg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  
-  h3 {
-    text-align: center;
-  }
-  
+  font-family: "Bruno Ace", sans-serif;
+  border: 3px solid #45415bf0;
+  background-image: url("/img/RichLifestyle-BG.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.dropdownBtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: #f2f2f2;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown {
+  background-clip: padding-box;
+  background-color: #272b33;
+  border: max(1px, 0.0625rem) solid #45415bf0;
+  border-radius: 6px;
+  box-shadow: 0 8px 24px #010409;
+  left: 89%;
+  list-style: none;
+  margin-top: 2px;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  position: absolute;
+  top: 70%;
+  width: 160px;
+  z-index: 100;
+}
+
+h3 {
+  text-align: center;
+}
