--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Rich Life</title>
 
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-
-    <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap"
       rel="stylesheet"
@@ -21,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
 
@@ -30,22 +34,22 @@
       style="background-color: #8af2f4aa"
     >
       <div class="container-fluid p-2 navbar-font">
-        <h1 style="color:#45415b; font-family: 'Bruno Ace', sans-serif;">Rich
-          Lifestyle</h1>
+        <h1>Rich Lifestyle</h1>
       </div>
       {{#if loggedIn}}
-        <div class="dropdown">
+        <div class="userNav me-5">
           <button
-            class="btn btn-info dropdown-toggle m-3"
+            class="dropdownBtn dropdown-toggle"
             type="button"
             id="dropdownBtn"
             data-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="true"
           >
-            +
+            <i class="fa-solid fa-user" style="color: #ffffff;"></i>
           </button>
-          <div id="dropdown" class="show">
+
+          <div id="dropdown" class="show dropdown">
             <a
               id="homeBtn"
               class="dropdown-item text-light"
