removed excess code from home.css

--- a/views/forum.handlebars
+++ b/views/forum.handlebars
@@ -26,8 +26,8 @@
     <li class="list-group-item">{{post.content}}</li>
   </ul> --}}
 
-<div class="card m-auto mt-2 d-block" style="width: 40rem;">
-  <form id="comment-form" class="row g-2 m-auto">
+<div class="card container">
+  <div id="comment-form" class="dream-card">
     <label for="content">Comment as {{username}}</label>
     <textarea
       id="commentInput"
@@ -36,7 +36,7 @@
     ></textarea>
     <button class="btn btn-info" id="commentBtn" data-id="{{post.id}}">Comment</button>
     <p id="alert" style="color: red;"></p>
-  </form>
+  </div>
 </div>
 
 <div class="card m-auto mt-3 d-block" style="width: 40rem;">
