--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,20 +1,25 @@
-<div class="mb-3 m-3">
-  <h2>What does your rich life look like?</h2>
-  <label for="exampleFormControlTextarea1" class="form-label"></label>
-  <input
-    type="title"
-    id="title"
-    class="form-control mb-3"
-    placeholder="Create a title (Can't be longer than 50 characters!)"
-  />
-  <textarea
-    class="form-control"
-    id="content"
-    rows="10"
-    placeholder="Envision and articulate your rich life here!"
-  ></textarea>
-  <button id="postBtn" type="submit" class="btn btn-info mt-3">Post</button>
-  <p id="alert" style="color: red;"></p>
+<div class="mt-5 d-flex flex-column align-items-center">
+  <div class="col-8">
+    <h2>What does your rich life look like?</h2>
+    <label for="exampleFormControlTextarea1" class="form-label"></label>
+    <input
+      type="title"
+      id="title"
+      class="form-control mb-3"
+      placeholder="Create a title (Can't be longer than 50 characters!)"
+    />
+    <textarea
+      class="form-control"
+      id="content"
+      rows="10"
+      placeholder="Envision and articulate your rich life here!"
+    ></textarea>
+    <div class="text-end me-3">
+      <button id="postBtn" type="submit" class="btn btn-info mt-3">Post</button>
+      <p id="alert" class="pt-3" style="color: red;"></p>
+    </div>
+
+  </div>
 </div>
 
 <script src="/js/dashboard.js"></script>
